--- a/package.json
+++ b/package.json
@@ -1,23 +1,96 @@
 {
-  "name": "porfolio",
+  "homepage": "https://github.com/mhijack/porfolio",
+  "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "description": "Jianyuan Chen's portfolio",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "start": "webpack-dev-server --host 0.0.0.0 --disable-host-check --open",
+    "build": "webpack -p",
+    "tsc": "tsc --watch",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mhijack/porfolio.git"
   },
-  "author": "Jianyuan Chen",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mhijack/porfolio/issues"
+  "author": "Jianyuan Chen (Jack) <jianyuan.chen12@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-react": "^7.12.13",
+    "autoprefixer": "7.1.6",
+    "babel-loader": "^8.2.2",
+    "babel-preset-react-app": "^3.1.2",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "css-loader": "^0.28.11",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.2.0",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "prop-types": "^15.7.2",
+    "raf": "3.4.0",
+    "react": "^17.0.1",
+    "react-dev-utils": "^5.0.2",
+    "react-dom": "^17.0.1",
+    "react-icons": "^3.2.1",
+    "react-inlinesvg": "^0.8.1",
+    "react-interactive": "^0.9.5",
+    "react-router-dom": "^5.2.0",
+    "react-svg-loader": "^2.1.0",
+    "resolve": "1.6.0",
+    "style-loader": "0.19.0",
+    "svg-url-loader": "^7.1.1",
+    "url-loader": "0.6.2",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
   },
-  "homepage": "https://github.com/mhijack/porfolio#readme",
   "devDependencies": {
-    "node-sass": "^4.9.0"
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-interactive": "^0.9.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.1.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "source-map-loader": "^1.1.3",
+    "svg-inline-loader": "^0.8.0",
+    "svg-sprite-loader": "^4.1.1",
+    "terser-webpack-plugin": "^4.2.3",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.2.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*": "prettier --write --ignore-unknown"
+  }
 }
