--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/mhijack/porfolio",
+  "homepage": "https://github.com/mhijack/mhijack.github.io",
   "name": "portfolio",
   "version": "1.0.0",
   "private": true,
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mhijack/porfolio.git"
+    "url": "git+https://github.com/mhijack/mhijack.github.io.git"
   },
   "author": "Jianyuan Chen (Jack) <jianyuan.chen12@gmail.com>",
   "license": "MIT",
